# playwright-fetch

./: .coveragerc  .dockerignore  .gitignore  .ruff.toml  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  bandit.yaml  codecov.yml  install.md  mypy.ini  pyproject.toml  pytest.ini  run.py  setup.py
.github/workflows/: auto-release.yml  auto-version.yml  ci.yml  release.yml
examples/configs/: README.md  mcp_config.json  mcp_config_updated.json  vscode_config.json
src/mcp_server_fetch/: __init__.py  __main__.py  handlers.py  handlers.pyi  server.py
stubs/markdownify/: __init__.pyi
stubs/protego/: __init__.pyi
tests/: conftest.py
tests/disable/: test_main.py
tests/fixtures/: browser_fixture.py
tests/skip/: test_content_handling.py  test_fetch.py  test_integration.py  test_server.py
tests/unit/: conftest.py  skip_tests.py  test_error_handling.py  test_fetch_basic.py  test_fetch_complete.py  test_fetch_content_extraction.py  test_fetch_errors.py  test_fetch_simple.py  test_get_robots_txt_url.py  test_html_conversion.py  test_html_to_markdown_full.py  test_main_entry.py  test_main_module.py  test_robots_basic.py  test_robots_errors.py  test_robots_txt.py  test_server_endpoints.py  test_server_functions.py  test_server_individual_handlers.py  test_server_with_mocks.py
