[project]
name = "mcp-server-playwright-fetch"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to fetch and convert web content using Playwright"
readme = "README.md"
requires-python = ">=3.13.0"
authors = [
    { name = "Wyatt Roersma", email = "wyattroersma@gmail.com" }
]
keywords = ["http", "mcp", "llm", "automation", "playwright"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.1.3",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "protego>=0.3.1",
    "markdownify>=0.13.1",
    "httpx<0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.7.3",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "coverage>=7.2.0",
    "pre-commit>=3.6.0",
    "pyright>=1.1.389",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
mcp-server-playwright-fetch = "mcp_server_fetch:main"

[project.urls]
"Homepage" = "https://github.com/ThreatFlux/playwright-fetch"
"Bug Tracker" = "https://github.com/ThreatFlux/playwright-fetch/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_server_fetch"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
mcp_server_fetch = ["*.py"]

[tool.black]
line-length = 120
target-version = ["py313"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "strict"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]